| Summary: | ASTERISK-29761: res: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-19 03:00:37.000-0600 | Date Closed: | 2021-12-03 10:38:43.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} res/snmp/agent.h:18: warning: argument 'Not' of command @param is not found in the argument list of agent_thread(void *arg) res/snmp/agent.h:25: warning: unable to resolve reference to 'res_snmp_dontStop' for \ref command res/snmp/agent.c:189: warning: The following parameter of agent_thread(void *arg) is not documented: parameter 'arg' res/snmp/agent.h:18: warning: argument 'Not' of command @param is not found in the argument list of agent_thread(void *arg) res/snmp/agent.h:25: warning: unable to resolve reference to 'res_snmp_dontStop' for \ref command res/snmp/agent.h:28: warning: The following parameter of agent_thread(void *arg) is not documented: parameter 'arg' res/prometheus/bridges.c:40: warning: Found unknown command '\snapshot' res/prometheus/bridges.c:42: warning: The following parameter of get_bridge_channel_count(struct prometheus_metric *metric, struct ast_bridge_snapshot *snapshot) is not documented: parameter 'snapshot' res/res_stir_shaken/certificate.h:30: warning: argument 'callier_id_number' of command @param is not found in the argument list of stir_shaken_certificate_get_by_caller_id_number(const char *caller_id_number) res/res_stir_shaken/certificate.c:84: warning: The following parameter of stir_shaken_certificate_get_by_caller_id_number(const char *caller_id_number) is not documented: parameter 'caller_id_number' res/res_stir_shaken/certificate.h:30: warning: argument 'callier_id_number' of command @param is not found in the argument list of stir_shaken_certificate_get_by_caller_id_number(const char *caller_id_number) res/res_stir_shaken/certificate.h:35: warning: The following parameter of stir_shaken_certificate_get_by_caller_id_number(const char *caller_id_number) is not documented: parameter 'caller_id_number' res/prometheus/channels.c:43: warning: Found unknown command '\snapshot' res/prometheus/channels.c:45: warning: The following parameter of get_channel_state(struct prometheus_metric *metric, struct ast_channel_snapshot *snapshot) is not documented: parameter 'snapshot' res/res_stir_shaken/curl.c:86: warning: The following parameters of curl_header_callback(char *buffer, size_t size, size_t nitems, void *data) are not documented: parameter 'buffer' parameter 'size' parameter 'nitems' res/prometheus/endpoints.c:42: warning: Found unknown command '\snapshot' res/prometheus/endpoints.c:44: warning: The following parameter of get_endpoint_state(struct prometheus_metric *metric, struct ast_endpoint_snapshot *snapshot) is not documented: parameter 'snapshot' res/res_calendar.c:587: warning: documented empty return type of ast_calendar_unregister res/res_chan_stats.c:122: warning: argument 'topic' of command @param is not found in the argument list of default_route(void *data, struct stasis_subscription *sub, struct stasis_message *message) res/res_chan_stats.c:49: warning: argument 'topic' of command @param is not found in the argument list of statsmaker(void *data, struct stasis_subscription *sub, struct stasis_message *message) res/res_chan_stats.c:81: warning: argument 'topic' of command @param is not found in the argument list of updates(void *data, struct stasis_subscription *sub, struct stasis_message *message) res/res_config_ldap.c:894: warning: Found unknown command '\TODO' res/res_config_ldap.c:1761: warning: Found unknown command '\breif' res/res_config_sqlite3.c:560: warning: argument 'data' of command @param is not found in the argument list of row_counter_wrapper(void *arg, int num_columns, char **values, char **columns) res/res_config_sqlite3.c:576: warning: The following parameter of row_counter_wrapper(void *arg, int num_columns, char **values, char **columns) is not documented: parameter 'arg' res/res_crypto.c:492: warning: documented empty return type of crypto_load res/res_hep.c:147: warning: Found unknown command '\REF' include/asterisk/res_hep.h:90: warning: unable to resolve reference to 'payload' for \ref command include/asterisk/res_hep.h:105: warning: unable to resolve reference to 'capture_info' for \ref command include/asterisk/res_hep.h:90: warning: unable to resolve reference to 'payload' for \ref command include/asterisk/res_hep.h:105: warning: unable to resolve reference to 'capture_info' for \ref command res/res_http_websocket.c:210: warning: The following parameter of ast_websocket_server_add_protocol(struct ast_websocket_server *server, const char *name, ast_websocket_callback callback) is not documented: parameter 'server' include/asterisk/http_websocket.h:211: warning: unable to resolve reference to 'protocol' for \ref command include/asterisk/http_websocket.h:130: warning: unable to resolve reference to 'websocket_server' for \ref command include/asterisk/http_websocket.h:132: warning: unable to resolve reference to 'websocket_server' for \ref command include/asterisk/http_websocket.h:133: warning: unexpected token in comment block while parsing the argument of command retval res/res_http_websocket.c:266: warning: The following parameter of ast_websocket_server_remove_protocol(struct ast_websocket_server *server, const char *name, ast_websocket_callback callback) is not documented: parameter 'server' res/res_http_websocket.c:1088: warning: Unsupported xml/html tag <host> found res/res_http_websocket.c:1088: warning: Unsupported xml/html tag <path> found res/res_monitor.c:308: warning: The following parameter of ast_monitor_start(struct ast_channel *chan, const char *format_spec, const char *fname_base, int need_lock, int stream_action, const char *beep_id) is not documented: parameter 'beep_id' res/res_mwi_external.c:225: warning: documented empty return type of ast_mwi_mailbox_set_msgs_new res/res_mwi_external.c:230: warning: documented empty return type of ast_mwi_mailbox_set_msgs_old res/res_mwi_external.c:888: warning: documented empty return type of mwi_initial_events res/res_mwi_external.c:260: warning: documented empty return type of mwi_mailbox_delete res/res_mwi_external.c:274: warning: documented empty return type of mwi_mailbox_delete_all res/res_mwi_external.c:110: warning: documented empty return type of mwi_observe_delete res/res_mwi_external.c:92: warning: documented empty return type of mwi_post_event include/asterisk/res_mwi_external.h:107: warning: documented empty return type of ast_mwi_mailbox_set_msgs_new include/asterisk/res_mwi_external.h:118: warning: documented empty return type of ast_mwi_mailbox_set_msgs_old include/asterisk/phoneprov.h:96: warning: argument 'defaults' of command @param is not found in the argument list of ast_phoneprov_add_extension(char *provider_name, struct varshead *vars) res/res_phoneprov.c:1621: warning: The following parameter of ast_phoneprov_add_extension(char *provider_name, struct varshead *vars) is not documented: parameter 'vars' res/res_phoneprov.c:511: warning: The following parameter of build_route(struct phoneprov_file *pp_file, struct phone_profile *profile, struct user *user, char *uri) is not documented: parameter 'profile' res/res_pjproject.c:482: warning: documented empty return type of ast_pjproject_caching_pool_destroy res/res_pjproject.c:475: warning: documented empty return type of ast_pjproject_caching_pool_init res/res_pjproject.c:279: warning: documented empty return type of ast_pjproject_log_intercept_begin res/res_pjproject.c:288: warning: documented empty return type of ast_pjproject_log_intercept_end include/asterisk/res_pjproject.h:100: warning: documented empty return type of ast_pjproject_caching_pool_destroy include/asterisk/res_pjproject.h:89: warning: documented empty return type of ast_pjproject_caching_pool_init include/asterisk/res_pjproject.h:65: warning: documented empty return type of ast_pjproject_log_intercept_begin include/asterisk/res_pjproject.h:77: warning: documented empty return type of ast_pjproject_log_intercept_end res/res_prometheus.c:419: warning: unexpected token in comment block while parsing the argument of command retval res/res_rtp_asterisk.c:3468: warning: documented empty return type of rtp_learning_start include/asterisk/multicast_rtp.h:54: warning: Found unknown command '\revval' include/asterisk/statsd.h:92: warning: argument 'type_str' of command @param is not found in the argument list of ast_statsd_log_full(const char *metric_name, const char *metric_type, intmax_t value, double sample_rate) res/res_statsd.c:174: warning: The following parameter of ast_statsd_log_full(const char *metric_name, const char *metric_type, intmax_t value, double sample_rate) is not documented: parameter 'metric_type' include/asterisk/statsd.h:54: warning: argument 'type_str' of command @param is not found in the argument list of ast_statsd_log_string(const char *metric_name, const char *metric_type, const char *value, double sample_rate) res/res_statsd.c:117: warning: The following parameter of ast_statsd_log_string(const char *metric_name, const char *metric_type, const char *value, double sample_rate) is not documented: parameter 'metric_type' res/res_stun_monitor.c:272: warning: The following parameter of setup_stunaddr(const char *value, int reload) is not documented: parameter 'reload' res/res_stun_monitor.c:208: warning: documented empty return type of stun_stop_monitor main/rtp_engine.c:1257: warning: documented empty return type of ast_rtp_codecs_payloads_xover include/asterisk/rtp_engine.h:2698: warning: argument 'rtp' of command @param is not found in the argument list of ast_rtp_instance_set_stream_num(struct ast_rtp_instance *instance, int stream_num) main/rtp_engine.c:3830: warning: The following parameter of ast_rtp_instance_set_stream_num(struct ast_rtp_instance *instance, int stream_num) is not documented: parameter 'instance' {code}These are the remaining warnings in {{/res}} combined as one. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-19 03:00:39.392-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-12-03 10:38:44.561-0600 Change 17511 merged by Friendly Automation: res: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17511|https://gerrit.asterisk.org/c/asterisk/+/17511] By: Friendly Automation (friendly-automation) 2021-12-03 10:42:53.080-0600 Change 17556 merged by Friendly Automation: res: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17556|https://gerrit.asterisk.org/c/asterisk/+/17556] By: Friendly Automation (friendly-automation) 2021-12-03 10:43:24.351-0600 Change 17512 merged by Friendly Automation: res: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17512|https://gerrit.asterisk.org/c/asterisk/+/17512] By: Friendly Automation (friendly-automation) 2021-12-03 12:12:06.812-0600 Change 17557 merged by Friendly Automation: res: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17557|https://gerrit.asterisk.org/c/asterisk/+/17557] | ||