res/res_pjsip/pjsip_resolver.c
@@ -92,8 +92,6 @@ static int sip_available_transports[] = {
  * \brief Destroy resolution data
  *
  * \param data The resolution data to destroy
- *
- * \return Nothing
  */
 static void sip_resolve_destroy(void *data)
 {
@@ -185,7 +183,7 @@ static int sip_resolve_add(struct sip_resolve *resolve, const char *name, int rr
  *
  * \param data The complete resolution
  *
- * \return Nothing
+ * \retval 0 Always
  */
 static int sip_resolve_invoke_user_callback(void *data)
 {
@@ -262,8 +260,6 @@ static int sip_resolve_handle_naptr(struct sip_resolve *resolve, const struct as
  * \brief Query set callback function, invoked when all queries have completed
  *
  * \param query_set The completed query set
- *
- * \return Nothing
  */
 static void sip_resolve_callback(const struct ast_dns_query_set *query_set)
 {
@@ -630,8 +626,6 @@ static void sip_resolve(pjsip_resolver_t *resolver, pj_pool_t *pool, const pjsip
  * \param pool A memory pool to allocate things from
  * \param transport The type of transport to check
  * \param name A friendly name to print in the verbose message
- *
- * \return Nothing
  */
 static void sip_check_transport(pj_pool_t *pool, pjsip_transport_type_e transport, const char *name)
 {
